[package]
name = "backend-dogfight-rust-24-q1"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde_json = "1.0.113"
deadpool-postgres = { version = "0.12.1" }
tokio-postgres = { version = "0.7.10" }
postgres-types = { version = "0.2.6", features = ["derive"] }